# wcf-http

./: .gitignore  README.md  pyproject.toml
src/wcf_http/: core.py  main.py
