[tool.poetry]
name = "wcf-http"
version = "0.1.0"
description = ""
authors = ["sean <sean.li@vectorindex.cloud>"]
readme = "README.md"
packages = [{include = "wcf_http", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
wcferry = "~39.2.4"
uvicorn = "^0.32.0"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
